--- a/pur_beurre_project/authentification/templates/authentification/login.html
+++ b/pur_beurre_project/authentification/templates/authentification/login.html
@@ -6,7 +6,7 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-8 align-self-center mb-2">
-                    <h2 class="text-white-75 mb-4"> Connection</h2>
+                    <h2 class="text-white-75 mb-4">Connection</h2>
                 </div>
             </div>
         </div>
@@ -15,21 +15,22 @@
     <section class="page-section bg-white" id="services">
         <div class="container">
             <div class="row justify-content-center">
-                <form action="create_account.html" method="post" novalidate>
+                <form action="{% url 'authentification:account'%}" method="post" novalidate>
+                    {% csrf_token %}
                     <div class="form-group align-content-center">
                         <div class="row justify-content-center">
                             <div class="col-8 col-lg-7 pl-2">
                                 <label for="email" class="text-dark">Email</label>
-                                <input type="email" id="email" class="form-control" value="" required>
+                                <input type="email" id="login_email" class="form-control" required>
                             </div>
                             <div class="col-8 col-lg-7 pl-2 pt-4">
                                 <label for="pwd" class="text-dark">Mot de passe</label>
-                                <input type="password" id="user_password" class="form-control text-dark" value="" required>
+                                <input type="password" id="login_password" class="form-control text-dark" required>
                             </div>
                             <div class="col-8 col-lg-7 pl-2 pt-5">
                                 <button type="submit" id="login_button" class=" btn btn-primary mb-4">Se connecter</button>
-                                <a href="" id="go_to_create_account" class="text-dark text-center">
-                                    <p>Pas de compte? Créer un compte</p>
+                                <a href="{% url 'authentification:create_account'%}" id="go_to_create_account" class="text-dark text-center">
+                                    <p class="pt-4">Pas de compte? Créer un compte</p>
                                 </a>
                             </div>
                         </div>
