--- a/pur_beurre_project/authentification/templates/authentification/create_account.html
+++ b/pur_beurre_project/authentification/templates/authentification/create_account.html
@@ -29,6 +29,8 @@
                             </div>
                             <div class="col-8 col-lg-7 pl-2 pt-5">
                                 <button type="submit" id="create_account_button" class=" btn btn-primary mb-4">Créer le compte</button>
+                                <a href="{% url 'authentification:login'%}" id="create_account_go_to_login" class="text-dark text-center">
+                                    <p class="pt-4">Déja un compte? Connectez-vous</p>
                             </div>
                         </div>
                     </div>
