--- a/pur_beurre_project/authentification/templates/authentification/create_account.html
+++ b/pur_beurre_project/authentification/templates/authentification/create_account.html
@@ -15,17 +15,28 @@
     <section class="page-section bg-white" id="services">
         <div class="container">
             <div class="row justify-content-center">
-                <form action="{% url 'authentification:account'%}" method="post" novalidate>
+                {% if error_message %}
+                <div class="row">
+                    <div class="col">
+                        <h6 class="text-primary pb-4"> {{ email}} {{ error_message }}</h6>
+                    </div>
+                </div>
+                {% endif %}
+                <form action="{% url 'authentification:create_account' %}" method="post" novalidate>
                     {% csrf_token %}
                     <div class="form-group align-content-center">
                         <div class="row justify-content-center">
                             <div class="col-8 col-lg-7 pl-2">
-                                <label for="email" class="text-dark">Email</label>
-                                <input type="email" id="create_account_email" class="form-control" required>
+                                <label for="create_account_first_name" class="text-dark">Prénom</label>
+                                <input type="text" id="create_account_first_name" name="create_account_first_name" class="form-control" required>
                             </div>
                             <div class="col-8 col-lg-7 pl-2 pt-4">
-                                <label for="pwd" class="text-dark">Mot de passe</label>
-                                <input type="password" id="create_account_password" class="form-control text-dark" required>
+                                <label for="create_account_email" class="text-dark">Email</label>
+                                <input type="email" id="create_account_email" name="create_account_email" class="form-control" required>
+                            </div>
+                            <div class="col-8 col-lg-7 pl-2 pt-4">
+                                <label for="create_account_password" class="text-dark">Mot de passe</label>
+                                <input type="password" id="create_account_password" name="create_account_password" class="form-control text-dark" required>
                             </div>
                             <div class="col-8 col-lg-7 pl-2 pt-5">
                                 <button type="submit" id="create_account_button" class=" btn btn-primary mb-4">Créer le compte</button>
