--- a/pur_beurre_project/authentification/templates/authentification/create_account.html
+++ b/pur_beurre_project/authentification/templates/authentification/create_account.html
@@ -22,31 +22,23 @@
                     </div>
                 </div>
                 {% endif %}
-                <form action="{% url 'authentification:create_account' %}" method="post" novalidate>
+                <form action="{% url 'authentification:create_account' %}" method="post">
                     {% csrf_token %}
                     <div class="form-group align-content-center">
                         <div class="row justify-content-center">
-                            <div class="col-8 col-lg-7 pl-2">
-                                <label for="create_account_first_name" class="text-dark">Prénom</label>
-                                <input type="text" id="create_account_first_name" name="create_account_first_name" class="form-control" required>
+                            <div class="col-8 col-lg-10 pl-2 text-dark w-100">
+                                {{form}}
                             </div>
-                            <div class="col-8 col-lg-7 pl-2 pt-4">
-                                <label for="create_account_email" class="text-dark">Email</label>
-                                <input type="email" id="create_account_email" name="create_account_email" class="form-control" required>
-                            </div>
-                            <div class="col-8 col-lg-7 pl-2 pt-4">
-                                <label for="create_account_password" class="text-dark">Mot de passe</label>
-                                <input type="password" id="create_account_password" name="create_account_password" class="form-control text-dark" required>
-                            </div>
-                            <div class="col-8 col-lg-7 pl-2 pt-5">
+                            <div class="col-8 col-lg-10 pl-2 pt-5">
                                 <button type="submit" id="create_account_button" class=" btn btn-primary mb-4">Créer le compte</button>
                                 <a href="{% url 'authentification:login'%}" id="create_account_go_to_login" class="text-dark text-center">
                                     <p class="pt-4">Déja un compte? Connectez-vous</p>
                             </div>
                         </div>
                     </div>
+
+                </form>
             </div>
-            </form>
         </div>
     </section>
 {% endblock %}
