create account view is quite nice and functionnal

--- a/pur_beurre_project/authentification/templates/authentification/create_account.html
+++ b/pur_beurre_project/authentification/templates/authentification/create_account.html
@@ -27,7 +27,7 @@
                     <div class="form-group align-content-center">
                         <div class="row justify-content-center">
                             <div class="col-8 col-lg-10 pl-2 text-dark w-100">
-                                {{form}}
+                                {{create_account_form}}
                             </div>
                             <div class="col-8 col-lg-10 pl-2 pt-5">
                                 <button type="submit" id="create_account_button" class=" btn btn-primary mb-4">Créer le compte</button>
