--- a/pur_beurre_project/authentification/templates/authentification/create_account.html
+++ b/pur_beurre_project/authentification/templates/authentification/create_account.html
@@ -16,11 +16,11 @@
         <div class="container">
             <div class="row justify-content-center">
                 {% if error_message %}
-                <div class="row">
-                    <div class="col">
+
+                    <div class="col-8 col-lg-10 text-center">
                         <h6 class="text-primary pb-4"> {{ email}} {{ error_message }}</h6>
                     </div>
-                </div>
+
                 {% endif %}
                 <form action="{% url 'authentification:create_account' %}" method="post">
                     {% csrf_token %}
@@ -33,6 +33,7 @@
                                 <button type="submit" id="create_account_button" class=" btn btn-primary mb-4">Créer le compte</button>
                                 <a href="{% url 'authentification:login'%}" id="create_account_go_to_login" class="text-dark text-center">
                                     <p class="pt-4">Déja un compte? Connectez-vous</p>
+                                </a>
                             </div>
                         </div>
                     </div>
