--- a/pur_beurre_project/authentication/templates/authentication/create_account.html
+++ b/pur_beurre_project/authentication/templates/authentication/create_account.html
@@ -16,13 +16,11 @@
         <div class="container">
             <div class="row justify-content-center">
                 {% if error_message %}
-
                     <div class="col-8 col-lg-10 text-center">
                         <h6 class="text-primary pb-4"> {{ email}} {{ error_message }}</h6>
                     </div>
-
                 {% endif %}
-                <form action="{% url 'authentification:create_account' %}" method="post">
+                <form action="{% url 'authentication:create_account' %}" method="post">
                     {% csrf_token %}
                     <div class="form-group align-content-center">
                         <div class="row justify-content-center">
@@ -31,7 +29,7 @@
                             </div>
                             <div class="col-8 col-lg-10 pl-2 pt-5">
                                 <button type="submit" id="create_account_button" class=" btn btn-primary mb-4">Créer le compte</button>
-                                <a href="{% url 'authentification:login'%}" id="create_account_go_to_login" class="text-dark text-center">
+                                <a href="{% url 'authentication:login'%}" id="create_account_go_to_login" class="text-dark text-center">
                                     <p class="pt-4">Déja un compte? Connectez-vous</p>
                                 </a>
                             </div>
