--- a/pur_beurre_project/authentication/templates/authentication/create_account.html
+++ b/pur_beurre_project/authentication/templates/authentication/create_account.html
@@ -25,7 +25,10 @@
                     <div class="form-group align-content-center">
                         <div class="row justify-content-center">
                             <div class="col-8 col-lg-10 pl-2 text-dark w-100">
-                                {{create_account_form}}
+                                {{ first_name.label }} {{ first_name }}
+                                {{ email.label }} {{ email }} 
+                                {{ password1.label }} {{ password1 }}
+                                {{ password2.label }} {{ password2 }}
 
                             </div>
                             <div class="col-8 col-lg-10 pl-2 pt-5">
