--- a/pur_beurre_project/authentication/templates/authentication/login.html
+++ b/pur_beurre_project/authentication/templates/authentication/login.html
@@ -31,7 +31,7 @@
                             </div>
                             <div class="col-8 col-lg-10 pl-2 pt-5">
                                 <button type="submit" id="login_button" class=" btn btn-primary mb-4">Se connecter</button>
-                                <a href="{% url 'authentication:create_account'%}" id="go_to_create_account" class="text-dark text-center">
+                                <a href="{% url 'authentication:signin'%}" id="go_to_create_account" class="text-dark text-center">
                                     <p class="pt-4">Pas de compte? Créer un compte</p>
                                 </a>
                             </div>
