--- a/pur_beurre_project/authentication/templates/authentication/login.html
+++ b/pur_beurre_project/authentication/templates/authentication/login.html
@@ -20,7 +20,8 @@
                     <div class="form-group align-content-center">
                         <div class="row justify-content-center">
                             <div class="col-8 col-lg-10 pl-2 text-dark w-100">
-                                {% for field in form.visible_fields %}
+                                {{ form }}
+                                <!-- {% for field in form.visible_fields %}
                                     <p>
                                         {{ field.label_tag }}<br>
                                         {{ field }}
@@ -28,7 +29,7 @@
                                             <p class="text-primary"> {{ error }}</p>
                                         {% endfor %}
                                     </p>
-                                {% endfor %}
+                                {% endfor %} -->
                             </div>
                             <div class="col-8 col-lg-10 pl-2 pt-5">
                                 <button type="submit" id="login_button" class=" btn btn-primary mb-4">Se connecter</button>
