--- a/pur_beurre_project/authentication/templates/authentication/sign_in.html
+++ b/pur_beurre_project/authentication/templates/authentication/sign_in.html
@@ -6,7 +6,7 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-8 align-self-center mb-2">
-                    <h2 class="text-white-75 mb-4"> Créer un compte </h2>
+                    <h2 class="text-white-75 mb-4">Connection</h2>
                 </div>
             </div>
         </div>
@@ -15,30 +15,30 @@
     <section class="page-section bg-white" id="services">
         <div class="container">
             <div class="row justify-content-center">
-                <form action="{% url 'authentication:signin' %}" method="post">
+                <form action="{% url 'authentication:sign_in'%}" method="post">
                     {% csrf_token %}
                     <div class="form-group align-content-center">
                         <div class="row justify-content-center">
                             <div class="col-8 col-lg-10 pl-2 text-dark w-100">
-                                {% for field in form %}
-                                <p>
-                                    {{ field.label_tag }}<br>
-                                    {{ field }}
-                                    {% for error in field.errors %}
-                                    <p class="text-primary"> {{ error }}</p>
-                                    {% endfor %}
-                                </p>
-                                {% endfor %}
+                                {{ form }}
+                                <!-- {% for field in form.visible_fields %}
+                                    <p>
+                                        {{ field.label_tag }}<br>
+                                        {{ field }}
+                                        {% for error in field.errors %}
+                                            <p class="text-primary"> {{ error }}</p>
+                                        {% endfor %}
+                                    </p>
+                                {% endfor %} -->
                             </div>
                             <div class="col-8 col-lg-10 pl-2 pt-5">
-                                <button type="submit" id="create_account_button" class=" btn btn-primary mb-4">Créer le compte</button>
-                                <a href="{% url 'authentication:login'%}" id="create_account_go_to_login" class="text-dark text-center">
-                                    <p class="pt-4">Déja un compte? Connectez-vous</p>
+                                <button type="submit" id="login_button" class=" btn btn-primary mb-4">Se connecter</button>
+                                <a href="{% url 'authentication:sign_up'%}" id="go_to_create_account" class="text-dark text-center">
+                                    <p class="pt-4">Pas de compte? Créer un compte</p>
                                 </a>
                             </div>
                         </div>
                     </div>
-
                 </form>
             </div>
         </div>
