--- a/pur_beurre_project/authentication/templates/authentication/sign_in.html
+++ b/pur_beurre_project/authentication/templates/authentication/sign_in.html
@@ -20,8 +20,7 @@
                     <div class="form-group align-content-center">
                         <div class="row justify-content-center">
                             <div class="col-8 col-lg-10 pl-2 text-dark w-100">
-                                {{ form }}
-                                <!-- {% for field in form.visible_fields %}
+                                {% for field in form %}
                                     <p>
                                         {{ field.label_tag }}<br>
                                         {{ field }}
@@ -29,7 +28,7 @@
                                             <p class="text-primary"> {{ error }}</p>
                                         {% endfor %}
                                     </p>
-                                {% endfor %} -->
+                                {% endfor %}
                             </div>
                             <div class="col-8 col-lg-10 pl-2 pt-5">
                                 <button type="submit" id="login_button" class=" btn btn-primary mb-4">Se connecter</button>
