--- a/pur_beurre_project/authentication/templates/authentication/account.html
+++ b/pur_beurre_project/authentication/templates/authentication/account.html
@@ -6,7 +6,7 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center text-center"> 
                 <div class="col-lg-8 align-self-center mb-2">
-                    <h2 class="text-white-75 mb-4">[ Prénom utilisateur ]</h2>
+                    <h2 class="text-white-75 mb-4">[ {{ user.first_name}} ]</h2>
                 </div>
             </div>
         </div>
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
-                    <h4 class="m-4 text-dark"> [Email]</h4>
+                    <h4 class="m-4 text-dark"> {{ user.email}}</h4>
                 </div>
             </div>
         </div>
