--- a/pur_beurre_project/supersub/templates/supersub/base.html
+++ b/pur_beurre_project/supersub/templates/supersub/base.html
@@ -46,7 +46,7 @@
                             </a>
                         </li>
                         <li class="nav-item nav-link js-scroll-trigger navbar-brand">
-                            <a href="{% url 'supersub:index'%}">
+                            <a href="{% url 'authentication:sign_out'%}">
                                 <i class="fas fa-sign-out-alt"></i>
                             </a>
                         </li>
