--- a/pur_beurre_project/authentication/templates/authentication/account.html
+++ b/pur_beurre_project/authentication/templates/authentication/account.html
@@ -18,6 +18,11 @@
                 <div class="col-md-8 text-center">
                     <h4 class="m-4 text-dark"> {{ user.email}}</h4>
                 </div>
+                <div class="col-8 col-lg-10 pl-2 pt-5">
+                    <a href="{% url 'authentication:sign_in'%}" id="go_to_create_account" class="text-dark text-center">
+                        <p class="pt-4">Pas votre compte? Se connecter avec votre compte.</p>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
