--- a/pur_beurre_project/supersub/static/supersub/css/my_styles.css
+++ b/pur_beurre_project/supersub/static/supersub/css/my_styles.css
@@ -266,7 +266,7 @@ header.searchhead {
   height: 40vh;
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%),url("../assets/img/bg-masthead.jpg");
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%);
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
