--- a/pur_beurre_project/supersub/templates/supersub/results.html
+++ b/pur_beurre_project/supersub/templates/supersub/results.html
@@ -6,12 +6,13 @@
         {% load static %}
 
         <!-- Masthead-->
+            <!-- <header class="searchhead" id="searchhead" style="background-image:url('{{image}}');"> -->
         <header style="
             padding-top: 10rem;
             padding-bottom: calc(10rem - 4.5rem);
             background: 
                 linear-gradient(
-                    to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%
+                    to bottom, rgba(92, 77, 66, 0.6) 0%, rgba(92, 77, 66, 0.8) 100%
                 ),
                 url('{{image}}');
             background-position: center;
