renaming aliment and registered aliment into respectively product detail and registered products

--- a/pur_beurre_project/supersub/templates/supersub/product_detail.html
+++ b/pur_beurre_project/supersub/templates/supersub/product_detail.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
         </header>
-    <!-- Aliment dipslay section-->
+    <!-- Product dipslay section-->
     <section class="page-section bg-white text-dark" id="services">
         <div class="container">
             <div class="row">
