--- a/pur_beurre_project/supersub/templates/supersub/registered_aliments.html
+++ b/pur_beurre_project/supersub/templates/supersub/registered_aliments.html
@@ -9,7 +9,7 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center text-center"> 
                 <div class="col-lg-8 align-self-center mb-2">
-                    <h2 class="text-white-75 mb-4">Mes aliments enregistrés</h2>
+                    <h2 class="text-white-75 mb-4">Mes produits enregistrés</h2>
                 </div>
             </div>
         </div>
@@ -22,7 +22,7 @@
                     <div class="m-4 results-image">
                         <a href="" class="ele_dark_href">
                             <img class="img-fluid" src="{% static 'supersub/assets/img/portfolio/thumbnails/1.jpg' %}" alt="" />
-                            <p class="h4 m-1"> aliment 1</p>
+                            <p class="h4 m-1"> Produit 1</p>
                         </a>
                         <div class="nutriscore-circle">
                             <i class="fas fa-circle"></i>
