--- a/pur_beurre_project/supersub/templates/supersub/results.html
+++ b/pur_beurre_project/supersub/templates/supersub/results.html
@@ -30,13 +30,13 @@
         <!-- Services-->
         <section class="page-section bg-white" id="services">
             <div class="container">
-                <h4 class="text-dark text-center text-secondary-50 mb-4"> Vous pouvez remplacer cet aliment par:  </h4>
+                <h4 class="text-dark text-center text-secondary-50 mb-4"> Vous pouvez remplacer ce produit par:  </h4>
                 <hr class="divider my-4" />
                 <div class="row">
                     {% for product in products_in_categories %}
                         <div class="col-lg-4 col-sm-6 text-center">
                             <div class="m-4 results-image">
-                                <a href="{% url 'supersub:aliment' id_product=product.id %}" class="ele_dark_href">
+                                <a href="{% url 'supersub:product_detail' id_product=product.id %}" class="ele_dark_href">
                                     <img style="max-height: 80px;"  src=" {{ product.image }} " alt="" />
                                     <p class="h4 m-1"> {{ product.name }} </p>
                                 </a>
