working on register favorite view

--- a/pur_beurre_project/supersub/templates/supersub/results.html
+++ b/pur_beurre_project/supersub/templates/supersub/results.html
@@ -55,6 +55,9 @@
                                             Sauvegarder
                                         </p>
                                     </a>
+                                    {% if message %}
+                                        <p class=text-primary> {{mesage}}</p>
+                                    {% endif %}
                                 {% endif %}
 
                             </div>
