--- a/pur_beurre_project/supersub/templates/supersub/product_detail.html
+++ b/pur_beurre_project/supersub/templates/supersub/product_detail.html
@@ -10,7 +10,7 @@
                     linear-gradient(
                         to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%
                     ),
-                    url('{{image}}');
+                    url('{{product.image}}');
                 background-position: center;
                 background-attachment: scroll;
                 background-size: cover;"
@@ -18,7 +18,14 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center"> 
                     <div class="col-lg-8 align-self-center mb-2">
-                        <h2 class="text-white-75 mb-4">[ {{ name }} ]</h2>
+                        <h2 class="text-white-75 mb-4">[ {{ product.name }} ]</h2>
+                        {% if favorite_message %}
+                        <div class="row">
+                            <div class="col">
+                                <p class=text-primary>{{ favorite_message }}</p>
+                            </div>
+                        </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
@@ -30,16 +37,16 @@
                 <div class="col-md-6 text-center">
                     <p class="h5 m-2">Nutriscore</p>
                     <ul class="list-group mt-4">
-                        <h4 class="list-group-item-heading font-weight-bold text-uppercase"> {{ nutriscore_grade }} </h4>
+                        <h4 class="list-group-item-heading font-weight-bold text-uppercase"> {{ product.nutriscore_grade }} </h4>
                     </ul>
                 </div>
                 <div class="col-md-6 text-center">
                         <p class="h5 m-2">Repères nutritionnels pour 100g</p>
                         <ul class="list-group mt-4">
-                            <li class="list-group-item">{{ fat|floatformat:"1" }}g <span class="font-weight-bold">de matière grasse</span></li>
-                            <li class="list-group-item">{{ saturated_fat|floatformat:"1" }}g <span class="font-weight-bold">d'acides gras saturés</span></li>
-                            <li class="list-group-item">{{ sugar|floatformat:"1" }}g <span class="font-weight-bold">de sucre</span></li>
-                            <li class="list-group-item">{{ salt|floatformat:"1" }}g <span class="font-weight-bold">de sel</span></li>
+                            <li class="list-group-item">{{ product.fat|floatformat:"1" }}g <span class="font-weight-bold">de matière grasse</span></li>
+                            <li class="list-group-item">{{ product.saturated_fat|floatformat:"1" }}g <span class="font-weight-bold">d'acides gras saturés</span></li>
+                            <li class="list-group-item">{{ product.sugar|floatformat:"1" }}g <span class="font-weight-bold">de sucre</span></li>
+                            <li class="list-group-item">{{ product.salt|floatformat:"1" }}g <span class="font-weight-bold">de sel</span></li>
                         </ul>
                 </div>
             </div>
