--- a/pur_beurre_project/supersub/templates/supersub/results.html
+++ b/pur_beurre_project/supersub/templates/supersub/results.html
@@ -1,7 +1,7 @@
 {% extends 'supersub/base.html' %}
 
 {% block content %}
-    {% if name %}
+    {% if product.name %}
 
         {% load static %}
 
@@ -14,7 +14,7 @@
                 linear-gradient(
                     to bottom, rgba(92, 77, 66, 0.6) 0%, rgba(92, 77, 66, 0.8) 100%
                 ),
-                url('{{image}}');
+                url('{{product.image}}');
             background-position: center;
             background-attachment: scroll;
             background-size: cover;"
@@ -22,7 +22,7 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center"> 
                     <div class="col-lg-8 align-self-center mb-2">
-                        <h2 class="text-white-75 mb-4">[ {{ name }} ]</h2> 
+                        <h2 class="text-white-75 mb-4">[ {{ product.name }} ]</h2> 
                     </div>
                 </div>
             </div>
