--- a/pur_beurre_project/supersub/templates/supersub/registered_products.html
+++ b/pur_beurre_project/supersub/templates/supersub/registered_products.html
@@ -9,7 +9,7 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center text-center"> 
                 <div class="col-lg-8 align-self-center mb-2">
-                    <h2 class="text-white-75 mb-4">Mes produits enregistrés</h2>
+                    <h2 class="text-white-75 mb-4">Mes favoris</h2>
                 </div>
             </div>
         </div>
