--- a/pur_beurre_project/supersub/templates/supersub/results.html
+++ b/pur_beurre_project/supersub/templates/supersub/results.html
@@ -1,12 +1,10 @@
 {% extends 'supersub/base.html' %}
 
 {% block content %}
-    {% if product.name %}
-
+    {% if searched_product.name %}
         {% load static %}
-
         <!-- Masthead-->
-            <!-- <header class="searchhead" id="searchhead" style="background-image:url('{{image}}');"> -->
+        <!-- <header class="searchhead" id="searchhead" style="background-image:url('{{image}}');"> -->
         <header style="
             padding-top: 10rem;
             padding-bottom: calc(10rem - 4.5rem);
@@ -14,7 +12,7 @@
                 linear-gradient(
                     to bottom, rgba(92, 77, 66, 0.6) 0%, rgba(92, 77, 66, 0.8) 100%
                 ),
-                url('{{product.image}}');
+                url('{{searched_product.image}}');
             background-position: center;
             background-attachment: scroll;
             background-size: cover;"
@@ -22,7 +20,7 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center"> 
                     <div class="col-lg-8 align-self-center mb-2">
-                        <h2 class="text-white-75 mb-4">[ {{ product.name }} ]</h2> 
+                        <h2 class="text-white-75 mb-4">[ {{ searched_product.name }} ]</h2> 
                     </div>
                 </div>
             </div>
@@ -33,7 +31,7 @@
                 <h4 class="text-dark text-center text-secondary-50 mb-4"> Vous pouvez remplacer ce produit par:  </h4>
                 <hr class="divider my-4" />
                 <div class="row">
-                    {% for product in products_in_categories %}
+                    {% for product in products %}
                         <div class="col-lg-4 col-sm-6 text-center">
                             <div class="m-4 results-image">
                                 <a href="{% url 'supersub:product_detail' id_product=product.id %}" class="ele_dark_href">
@@ -63,12 +61,10 @@
                             </div>
                         </div>
                     {% endfor %}
-
                 </div>
             </div>
         </section>
     {% endif %}
-
 {% endblock %}
 
 
