test resulst is operationnal. Want ot get rid of the try except logic and nee to apply all this to the result view

--- a/pur_beurre_project/supersub/templates/supersub/results_test.html
+++ b/pur_beurre_project/supersub/templates/supersub/results_test.html
@@ -1,6 +1,6 @@
-{% for product in page_obj %}
+{% for paginator in page_obj %}
 
-    {{ product.name|upper }}<br>
+    {{ paginator.name|upper }}<br>
 
 {% endfor %}
 
