finetuning results pagination on template

--- a/pur_beurre_project/supersub/templates/supersub/results.html
+++ b/pur_beurre_project/supersub/templates/supersub/results.html
@@ -61,21 +61,23 @@
                         </div>
                     {% endfor %}
                 </div>
-                <div class="row">
-                    <div class="pagination">
-                        <span class="step-links">
-                            {% if page_object.has_previous %}
-                            <a href="?page={{ page_object.previous_page_number }}">previous</a>
-                            {% endif %}
-                    
-                            <span class="current">
-                                Page {{ page_object.number }} of {{ page_object.paginator.num_pages }}.
-                            </span>
-                    
-                            {% if page_object.has_next %}
-                            <a href="?page={{ page_object.next_page_number }}">next</a>
-                            {% endif %}
-                        </span>
+                <div class="row align-items-end text-center">
+                    <div class="col">
+                        <!-- <div class="pagination text-center">
+                            <span class="step-links"> -->
+                                {% if page_object.has_previous %}
+                                <a href="?page={{ page_object.previous_page_number }}" class="ele_dark_href">&laquo;</a>
+                                {% endif %}
+                
+                                <span class="current text-dark">
+                                    Page {{ page_object.number }} de {{ page_object.paginator.num_pages }}.
+                                </span>
+                
+                                {% if page_object.has_next %}
+                                <a href="?page={{ page_object.next_page_number }}" class="ele_dark_href">&raquo;</a>
+                                {% endif %}
+                            <!-- </span>
+                        </div> -->
                     </div>
                 </div>
             </div>
