improving navigation from pages to pages

--- a/pur_beurre_project/supersub/templates/supersub/product_detail.html
+++ b/pur_beurre_project/supersub/templates/supersub/product_detail.html
@@ -52,7 +52,7 @@
             </div>
             <div class="row">
                 <div class="col pt-5 text-center">
-                    <a href='{{ url }}'>
+                    <a href='{{ product.url }}'>
                         <button type="button" id="off_aliment" class="btn btn-primary">Voir la fiche d'OpenFoodFacts</button>
                     </a>
                 </div>
