--- a/pur_beurre_project/supersub/templates/supersub/results.html
+++ b/pur_beurre_project/supersub/templates/supersub/results.html
@@ -26,7 +26,7 @@
             </div>
         </header>
         <!-- Services-->
-        <section class="page-section bg-white" id="services">
+        <section class="page-section bg-white" id="favorite_section">
             <div class="container">
                 <h4 class="text-dark text-center text-secondary-50 mb-4"> Vous pouvez remplacer ce produit par:  </h4>
                 <hr class="divider my-4" />
@@ -66,7 +66,7 @@
                         <!-- <div class="pagination text-center">
                             <span class="step-links"> -->
                                 {% if page_object.has_previous %}
-                                <a href="?page={{ page_object.previous_page_number }}" class="ele_dark_href">&laquo;</a>
+                                <a href="?page={{ page_object.previous_page_number }}#favorite_section" class="ele_dark_href">&laquo;</a>
                                 {% endif %}
                 
                                 <span class="current text-dark">
@@ -74,7 +74,7 @@
                                 </span>
                 
                                 {% if page_object.has_next %}
-                                <a href="?page={{ page_object.next_page_number }}" class="ele_dark_href">&raquo;</a>
+                                <a href="?page={{ page_object.next_page_number }}#favorite_section" class="ele_dark_href">&raquo;</a>
                                 {% endif %}
                             <!-- </span>
                         </div> -->
