registered product renamed into favorites in entire MVT. Class create dinstead of function view

--- a/pur_beurre_project/supersub/templates/supersub/base.html
+++ b/pur_beurre_project/supersub/templates/supersub/base.html
@@ -41,7 +41,7 @@
                             </a>
                         </li>
                         <li class="nav-item nav-link js-scroll-trigger navbar-brand">
-                            <a href="{% url 'supersub:registered_products' %}">
+                            <a href="{% url 'supersub:favorites' %}">
                                 <i class="fas fa-carrot" data-fa-transform="rotate-315"></i>
                             </a>
                         </li>
