--- a/pur_beurre_project/supersub/templates/supersub/product_detail.html
+++ b/pur_beurre_project/supersub/templates/supersub/product_detail.html
@@ -19,13 +19,17 @@
                 <div class="row h-100 align-items-center justify-content-center text-center"> 
                     <div class="col-lg-8 align-self-center mb-2">
                         <h2 class="text-white-75 mb-4">[ {{ product.name }} ]</h2>
-                        {% if message %}
-                        <div class="row">
-                            <div class="col">
-                                <p class="text-primary text-uppercase">{{ message }}</p>
+                        {% for message in messages %}
+                            <div class="row">
+                                <div class="col">
+                                    <p {% if message.tags %} 
+                                            class="{{ message.tags }}"
+                                        {% endif %}>
+                                        {{ message }}
+                                    </p>
+                                </div>
                             </div>
-                        </div>
-                        {% endif %}
+                        {% endfor %}
                     </div>
                 </div>
             </div>
