Created Legal mentions MVT

--- a/pur_beurre_project/supersub/templates/supersub/base.html
+++ b/pur_beurre_project/supersub/templates/supersub/base.html
@@ -65,7 +65,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
                         <div class="row">
-                            <div class="col-sm-6 align-self-center text-muted"><a href="#mention_legales" class="footer-text">Mention légales</a></div>
+                            <div class="col-sm-6 align-self-center text-muted"><a href="{% url 'supersub:legal_mentions'%}" class="footer-text">Mention légales</a></div>
                             <div class="col-sm-6 align-self-center text-muted"><a href="{% url 'supersub:index'%}#contact" class="footer-text">Contact</a></div>
                         </div>
                     </div>
