--- a/pur_beurre_project/supersub/templates/supersub/index.html
+++ b/pur_beurre_project/supersub/templates/supersub/index.html
@@ -14,7 +14,7 @@
                     <h2 class="text-white-75 font-weight-light">Trouvez un produit de substitution pour ceux que vous
                         consommez tous les jours!</h2>
                 </div>
-                <div class="col-10 col-md-8 col-lg-5  align-self-start">
+                <div class="col-10 col-md-8 col-lg-5 align-self-start">
                     {% if messages %}
                         {% for message in messages %}
                         <div class="row">
@@ -28,15 +28,22 @@
                     {% endif %}
                     <form action="{% url 'supersub:results'%}" method="get" novalidate>
                         {% csrf_token %}
-                        <div class="form-group align-content-end">
-                            <div class="row  mt-4">
-                                <div class="col-8">
-                                    <input type="text" name ="product" id="product" class="form-control text-dark" required>
-                                </div>
-                                <div class="col-4">
-                                    <input type="submit" id="ask_button" class="btn btn-primary" value="Chercher">
-                                </div>
+                        <div class="form-group align-content-center">
+                        <div class="row justify-content-center">
+                            <div class="col-8 col-lg-10 pl-2 w-100">
+                                {% for field in form %}
+                                    <p>
+                                        {{ field }}
+                                        {% for error in field.errors %}
+                                            <p class="text-primary"> {{ error }}</p>
+                                        {% endfor %}
+                                    </p>
+                                {% endfor %}
                             </div>
+                            <div class="col-8 col-lg-10 pl-2 ">
+                                <button type="submit" id="create_account_button" class=" btn btn-primary mb-4">Chercher</button>
+                            </div>
+                        </div>
                         </div>
                     </form>
                 </div>
