added for Form class for navabar. Functionnal but needs to be instanciated into each vie. Needs thnking on that

--- a/pur_beurre_project/supersub/templates/supersub/index.html
+++ b/pur_beurre_project/supersub/templates/supersub/index.html
@@ -31,7 +31,7 @@
                         <div class="form-group align-content-center">
                         <div class="row justify-content-center">
                             <div class="col-8 col-lg-10 pl-2 w-100">
-                                {% for field in form %}
+                                {% for field in main_form %}
                                     <p>
                                         {{ field }}
                                         {% for error in field.errors %}
