--- a/pur_beurre_project/supersub/templates/supersub/index.html
+++ b/pur_beurre_project/supersub/templates/supersub/index.html
@@ -26,7 +26,7 @@
                         </div>
                         {% endfor %}
                     {% endif %}
-                    <form action="{% url 'supersub:results'%}" method="get" novalidate>
+                    <form action="{% url 'supersub:results'%}" method="post" novalidate>
                         {% csrf_token %}
                         <div class="form-group align-content-center">
                         <div class="row justify-content-center">
