--- a/pur_beurre_project/supersub/templates/supersub/product_detail.html
+++ b/pur_beurre_project/supersub/templates/supersub/product_detail.html
@@ -10,7 +10,7 @@
                     linear-gradient(
                         to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%
                     ),
-                    url('{{product.image}}');
+                    url('{{prod.image}}');
                 background-position: center;
                 background-attachment: scroll;
                 background-size: cover;"
@@ -18,7 +18,7 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center"> 
                     <div class="col-lg-8 align-self-center mb-2">
-                        <h2 class="text-white-75 mb-4">[ {{ product.name }} ]</h2>
+                        <h2 class="text-white-75 mb-4">[ {{ prod.name }} ]</h2>
                         {% if messages %}
                             {% for message in messages %}
                                 <div class="row">
@@ -43,22 +43,22 @@
                 <div class="col-md-6 text-center">
                     <p class="h5 m-2">Nutriscore</p>
                     <ul class="list-group mt-4">
-                        <h4 class="list-group-item-heading font-weight-bold text-uppercase"> {{ product.nutriscore_grade }} </h4>
+                        <h4 class="list-group-item-heading font-weight-bold text-uppercase"> {{ prod.nutriscore_grade }} </h4>
                     </ul>
                 </div>
                 <div class="col-md-6 text-center">
                         <p class="h5 m-2">Repères nutritionnels pour 100g</p>
                         <ul class="list-group mt-4">
-                            <li class="list-group-item">{{ product.fat|floatformat:"1" }}g <span class="font-weight-bold">de matière grasse</span></li>
-                            <li class="list-group-item">{{ product.saturated_fat|floatformat:"1" }}g <span class="font-weight-bold">d'acides gras saturés</span></li>
-                            <li class="list-group-item">{{ product.sugar|floatformat:"1" }}g <span class="font-weight-bold">de sucre</span></li>
-                            <li class="list-group-item">{{ product.salt|floatformat:"1" }}g <span class="font-weight-bold">de sel</span></li>
+                            <li class="list-group-item">{{ prod.fat|floatformat:"1" }}g <span class="font-weight-bold">de matière grasse</span></li>
+                            <li class="list-group-item">{{ prod.saturated_fat|floatformat:"1" }}g <span class="font-weight-bold">d'acides gras saturés</span></li>
+                            <li class="list-group-item">{{ prod.sugar|floatformat:"1" }}g <span class="font-weight-bold">de sucre</span></li>
+                            <li class="list-group-item">{{ prod.salt|floatformat:"1" }}g <span class="font-weight-bold">de sel</span></li>
                         </ul>
                 </div>
             </div>
             <div class="row">
                 <div class="col pt-5 text-center">
-                    <a href='{{ product.url }}'>
+                    <a href='{{ prod.url }}'>
                         <button type="button" id="off_aliment" class="btn btn-primary">Voir la fiche d'OpenFoodFacts</button>
                     </a>
                 </div>
