--- a/pur_beurre_project/supersub/templates/supersub/results.html
+++ b/pur_beurre_project/supersub/templates/supersub/results.html
@@ -1,7 +1,7 @@
 {% extends 'supersub/base.html' %}
 
 {% block content %}
-    {% if searched_product.name %}
+    {% if searched_prod.name %}
         {% load static %}
         <!-- Masthead-->
         <!-- <header class="searchhead" id="searchhead" style="background-image:url('{{image}}');"> -->
@@ -12,7 +12,7 @@
                 linear-gradient(
                     to bottom, rgba(92, 77, 66, 0.6) 0%, rgba(92, 77, 66, 0.8) 100%
                 ),
-                url('{{searched_product.image}}');
+                url('{{searched_prod.image}}');
             background-position: center;
             background-attachment: scroll;
             background-size: cover;"
@@ -20,7 +20,7 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center"> 
                     <div class="col-lg-8 align-self-center mb-2">
-                        <h2 class="text-white-75 mb-4">[ {{ searched_product.name }} ]</h2> 
+                        <h2 class="text-white-75 mb-4">[ {{ searched_prod.name }} ]</h2> 
                     </div>
                 </div>
             </div>
@@ -31,10 +31,10 @@
                 <h4 class="text-dark text-center text-secondary-50 mb-4"> Vous pouvez remplacer ce produit par:  </h4>
                 <hr class="divider my-4" />
                 <div class="row">
-                    {% for paginator in page_object %}
+                    {% for paginator in page_obj %}
                         <div class="col-lg-4 col-sm-6 text-center">
                             <div class="m-4 results-image">
-                                <a href="{% url 'supersub:product_detail' id_product=paginator.id %}" class="ele_dark_href">
+                                <a href="{% url 'supersub:product_detail' id_prod=paginator.id %}" class="ele_dark_href">
                                     <img style="max-height: 80px;"  src=" {{ paginator.image }} " alt="" />
                                     <p class="h5 m-1"> {{ paginator.name }} </p>
                                 </a>
@@ -45,7 +45,7 @@
                                     <p>{{ paginator.nutriscore_grade }}</p>
                                 </div>
                                 {% if user.is_authenticated %}
-                                    <a href="{% url 'supersub:register_favorite' id_product=paginator.id%}" class="ele_dark_href">
+                                    <a href="{% url 'supersub:register_favorite' id_prod=paginator.id%}" class="ele_dark_href">
                                         <p class="mb-0">
                                             <span>
                                                 <i class="fas fa-save"></i>
