Finishing legal mentions html

--- a/pur_beurre_project/supersub/templates/supersub/legal_mentions.html
+++ b/pur_beurre_project/supersub/templates/supersub/legal_mentions.html
@@ -20,16 +20,18 @@
                     <h4 >Editeur</h4>
                     <p class="mb-4">Le site www.herokuapp.monsite.com est édité par:</p>
                     <ul>
-                        <li>La société: </li>
-                        <li>Siège social:</li>
-                        <li>Téléphone: </li>
+                        <li>La société: Ma société qui n'existe pas </li>
+                        <li>Type de société: Sarl qui n'existe pas </li>
+                        <li>SIRET: Un identifiant qui n'existe pas </li>
+                        <li>Siège social: Une adresse qui n'existe pas</li>
+                        <li>Téléphone: 0000000000</li>
+                        <li>Adresse électronique: adresseelectroniquequinexistepas@"email".fr</li>
                     </ul>
                     <h4 class="mt-4">Prestataire d'hébergement:</h4>
-                    <p class="mb-4">Le site www.herokuapp.monsite.com est hebergé par:</p>
+                    <p class="mb-4">Le site www.monsite.herokuapp.com est hebergé par:</p>
                     <ul>
-                        <li>La société: </li>
-                        <li>Siège social:</li>
-                        <li>Téléphone: </li>
+                        <li>La société: Heroku Inc.</li>
+                        <li>Siège social:415 Mission Street, Suite 300, San Fransisco, CA, 64105</li>
                     </ul>
                 </div>
             </div>
