working on test sign up functionnal test

--- a/pur_beurre_project/authentication/templates/authentication/sign_up.html
+++ b/pur_beurre_project/authentication/templates/authentication/sign_up.html
@@ -31,7 +31,7 @@
                                 {% endfor %}
                             </div>
                             <div class="col-8 col-lg-10 pl-2 pt-5">
-                                <button type="submit" id="create_account_button" class=" btn btn-primary mb-4">Créer le compte</button>
+                                <button type="submit" id="id_sign_up_button" class=" btn btn-primary mb-4">Créer le compte</button>
                                 <a href="{% url 'authentication:sign_in'%}" id="create_account_go_to_login" class="text-dark text-center">
                                     <p class="pt-4">Déja un compte? Connectez-vous</p>
                                 </a>
