test sign in use case is done

--- a/pur_beurre_project/authentication/templates/authentication/sign_in.html
+++ b/pur_beurre_project/authentication/templates/authentication/sign_in.html
@@ -31,7 +31,7 @@
                                 {% endfor %}
                             </div>
                             <div class="col-8 col-lg-10 pl-2 pt-5">
-                                <button type="submit" id="login_button" class=" btn btn-primary mb-4">Se connecter</button>
+                                <button type="submit" id="id_sign_in_button" class=" btn btn-primary mb-4">Se connecter</button>
                                 <a href="{% url 'authentication:sign_up'%}" id="go_to_create_account" class="text-dark text-center">
                                     <p class="pt-4">Pas de compte? Créer un compte</p>
                                 </a>
