--- a/supersub/static/supersub/css/my_styles.css
+++ b/supersub/static/supersub/css/my_styles.css
@@ -517,6 +517,16 @@ a.footer-text:hover {
   text-decoration: none;
 }
 
+.product-text {
+  color: rgba(232, 167, 93 , 0.75);
+}
+
+/*rgba(232, 167, 93 , 0.5);*/
+a.product-text:hover {
+  color: #c45525;
+  text-decoration: none;
+}
+
 a:not([href]):not([class]) {
   color: inherit;
   text-decoration: none;
