--- a/supersub/templates/supersub/favorites.html
+++ b/supersub/templates/supersub/favorites.html
@@ -18,18 +18,18 @@
         <section class="page-section bg-white" id="services">
             <div class="container">
                 <div class="row">
-                    {% for paginator in page_obj %}
+                    {% for favorite in page_obj %}
                         <div class="col-lg-4 col-sm-6 text-center">
                             <div class="m-4 results-image">
-                                <a href="{% url 'supersub:product_detail' id_prod=paginator.product.id %}" class="ele_dark_href">
-                                    <img style="max-height: 80px;" src=" {{ paginator.product.image }} " alt="" />
-                                    <p class="h5 m-1"> {{ paginator.product.name }} </p>
+                                <a href="{% url 'supersub:product_detail' id_prod=favorite.product.id %}" class="ele_dark_href">
+                                    <img style="max-height: 80px;" src=" {{ favorite.product.image }} " alt="" />
+                                    <p class="h5 m-1"> {{ favorite.product.name }} </p>
                                 </a>
                                 <div class="nutriscore-circle">
                                     <i class="fas fa-circle"></i>
                                 </div>
                                 <div class="nutriscore-letter text-uppercase">
-                                    <p>{{ paginator.product.nutriscore_grade }}</p>
+                                    <p>{{ favorite.product.nutriscore_grade }}</p>
                                 </div>
             
                             </div>
