--- a/supersub/static/supersub/css/my_styles.css
+++ b/supersub/static/supersub/css/my_styles.css
@@ -568,4 +568,26 @@ a:not([href]):not([class]):hover {
   text-shadow:2px 2px 4px #000000; 
 }
 
+.lg{
+  position: relative;
+}
+
+
+.lg:before{
+  background: linear-gradient(
+    to bottom, rgba(92, 77, 66, 0.6) 0%, rgba(92, 77, 66, 0.8) 100%
+  );
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  content: "";
+}
+
+.zl{
+  position: relative;
+  z-index: 11;
+}
 
