--- a/supersub/templates/supersub/results.html
+++ b/supersub/templates/supersub/results.html
@@ -4,24 +4,12 @@
     {% if searched_prod.name %}
         {% load static %}
         <!-- Masthead-->
-        <!-- <header class="searchhead" id="searchhead" style="background-image:url('{{image}}');"> -->
-        <header style="
-            padding-top: 10rem;
-            padding-bottom: calc(10rem - 4.5rem);
-            background: 
-                linear-gradient(
-                    to bottom, rgba(92, 77, 66, 0.6) 0%, rgba(92, 77, 66, 0.8) 100%
-                ),
-                url('{{searched_prod.image}}');
-            background-position: center;
-            background-attachment: scroll;
-            background-size: cover;"
-            class="searchhead" id="searchhead">
+        <header class="searchhead lg" id="searchhead" style="background-image:url('{{searched_prod.image}}');">
             <div class="container h-100">
                 <div class="row h-100 align-items-center justify-content-center text-center"> 
                     <div class="col-lg-8 align-self-center mb-2">
                         <a href="{% url 'supersub:product_detail' id_prod=searched_prod.id %}" class="product-text">
-                            <h2 id="result_searched_product" class="mb-4"> {{ searched_prod.name }} </h2>
+                            <h2 id="result_searched_product" class="mb-4 zl"> {{ searched_prod.name }} </h2>
                         </a>
                     </div>
                 </div>
